<resources>
    <string name="app_name">TaskIntern</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="activity_title">Istanbul Hava Durumu</string>

    <!-- Şehir adı -->
    <string name="city_name">İstanbul</string>

    <!-- Bugün -->
    <string name="today">Bugün</string>

    <!-- Hava durumu açıklaması -->
    <string name="weather_condition">Güneşli</string>

    <!-- Rüzgar -->
    <string name="wind">Rüzgar</string>

    <!-- Rüzgar hızı -->
    <string name="wind_speed">3 km/s</string>

    <!-- Tarihler -->
    <string name="date_1">Sal, 02 Nisan</string>
    <string name="date_2">Çarş, 03 Nisan</string>
    <string name="date_3">Per, 04 Nisan</string>
    <string name="date_4">Cuma, 05 Nisan</string>

    <!-- Sıcaklık aralıkları -->
    <string name="temperature_range">14° - 27°</string>
    <string name="temperature">26</string>
    <string name="cantigrate">°</string>

    <!-- Buton metni -->
    <string name="update_data">Verileri Güncelle</string>

    <string name="task1_text">Activity - Activity arasında navigasyon ve veri paslama</string>
    <string name="task2_text">Fragment - Fragment arasında navigasyon ve veri paslama</string>
    <string name="task3_text">Navigation Components kullanarak Fragmentlar arası navigasyon ve veri paslama</string>
    <string name="task4_text">Task 1</string>

</resources>