<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.WONavCompSecFragment">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/city_name" />

    <TextView
        android:id="@+id/text_view3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="@+id/city_name"
        app:layout_constraintStart_toStartOf="@+id/city_name"
        app:layout_constraintTop_toBottomOf="@+id/city_name"
        android:text="@string/today" />

    <ImageView
        android:id="@+id/weather_condition_img"
        android:layout_width="@dimen/dp_64"
        android:layout_height="@dimen/dp_64"
        android:layout_marginBottom="@dimen/dp_32"
        app:layout_constraintBottom_toTopOf="@+id/text_view_weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_sunny" />

    <TextView
        android:id="@+id/text_view_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_64"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/image_view410"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view3"
        tools:text="@string/temperature" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_64"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_weather"
        app:layout_constraintStart_toEndOf="@+id/text_view_weather"
        app:layout_constraintTop_toTopOf="@+id/text_view_weather"
        tools:text="@string/cantigrate" />

    <TextView
        android:id="@+id/weather_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_weather"
        tools:text="@string/weather_condition" />

    <TextView
        android:id="@+id/wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_condition"
        android:text="@string/wind" />

    <LinearLayout
        android:id="@+id/l_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wind">


        <ImageView
            android:id="@+id/image_view2"
            android:layout_width="@dimen/sp_14"
            android:layout_height="@dimen/sp_14"
            android:layout_marginRight="@dimen/dp_4"
            android:src="@drawable/ic_wind" />

        <TextView
            android:id="@+id/wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            android:text="@string/wind_speed" />


    </LinearLayout>

    <TextView
        android:id="@+id/text_date_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_8"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toTopOf="@+id/text_date_2"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/date_1" />

    <ImageView
        android:id="@+id/image_view410"
        android:layout_width="@dimen/dp_24"
        android:layout_height="@dimen/dp_24"
        app:layout_constraintBottom_toBottomOf="@+id/text_date_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_date_1"
        android:src="@drawable/ic_sunny" />

    <TextView
        android:id="@+id/ttemp_range_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_8"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toTopOf="@+id/temp_range_2"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/temperature_range" />

    <TextView
        android:id="@+id/text_date_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_8"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toTopOf="@+id/text_date_3"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/date_2" />


    <ImageView
        android:id="@+id/image_view5"
        android:layout_width="@dimen/dp_24"
        android:layout_height="@dimen/dp_24"
        app:layout_constraintBottom_toBottomOf="@+id/text_date_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_date_2"
        android:src="@drawable/ic_cloudy" />

    <TextView
        android:id="@+id/temp_range_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_8"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toTopOf="@+id/temp_range_3"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/temperature_range" />

    <TextView
        android:id="@+id/text_date_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_8"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toTopOf="@+id/text_date_4"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/date_3" />

    <ImageView
        android:id="@+id/image_view4"
        android:layout_width="@dimen/dp_24"
        android:layout_height="@dimen/dp_24"
        app:layout_constraintBottom_toBottomOf="@+id/text_date_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_date_3"
        android:src="@drawable/ic_sunny" />

    <TextView
        android:id="@+id/temp_range_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_8"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toTopOf="@+id/temp_range_4"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/temperature_range" />

    <TextView
        android:id="@+id/text_date_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_14"
        android:layout_marginBottom="@dimen/dp_32"
        android:layout_marginStart="@dimen/dp_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/date_4" />

    <ImageView
        android:id="@+id/text_img_cuma"
        android:layout_width="@dimen/dp_24"
        android:layout_height="@dimen/dp_24"
        app:layout_constraintBottom_toBottomOf="@+id/text_date_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_date_4"
        android:src="@drawable/ic_rainy" />

    <TextView
        android:id="@+id/temp_range_4"
        android:layout_marginEnd="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/temperature_range" />


</androidx.constraintlayout.widget.ConstraintLayout>
